LoginFilter(not all)

--- a/src/main/webapp/chat.html
+++ b/src/main/webapp/chat.html
@@ -16,10 +16,10 @@
                 <td valign="top" align=center rowspan=3>
                     <form>
                         <fieldset>
-                            <p style="color:#FFCCCC;">Enter your name</p>
+
                             <div align=center>
-                                <p><input id="login" type="text" class="in" name="никнейм" placeholder="Login" maxlength="10" size="20" ></p>
-                                <a href="#" id="loginButton" type="button"  class="button" onclick="changeLogin()">Save name</a>
+
+                                <a href="#" id="prevPageButton" type="button"  class="button" onclick="prevPage()">Exit</a>
 
                                 <br><br><br><br><img id="myImage" align=center title="Connection with the server" onclick="Javascript:changeImage()" src="images/serveron.png" width="50" height="90">
 
